--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
         <meta name="keywords" content="Все о картошке"/>
         <meta name="description" content="Полная история картошки, ее классификация, свойства."/>
-        <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+        <link rel="shortcut icon" type="image/png" href="image/favicon.png"/>
         <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
@@ -25,15 +25,15 @@
             </header>
             <nav>
                 <div class="menu__nav">
-                    <a href="#" class="menu__link"><p>История</p></a>
-                    <a href="#" class="menu__link"><p>Сорта</p></a>
+                    <a title="История картофеля в России" target="blank" href="https://cgon.rospotrebnadzor.ru/istoriya/istoriya-sanitarnogo-prosveshcheniya/istoriya-pitaniya/otkuda-poyavilsya-kartofel/" class="menu__link"><p>История</p></a>
+                    <a title="Сорта картофеля" target="blank" href="https://stroy-podskazka.ru/kartofel/sorta/" class="menu__link"><p>Сорта</p></a>
                     <a href="#" class="menu__link"><p>Контакты</p></a>
                     <a href="#" class="menu__link"><p>Новости</p></a>
                     <a href="#" class="menu__link"><p>Заказать</p></a>
                 </div>
             </nav>
         </section>
-
+        <script src="script.js"></script>
     </body>
 
 </html>
