--- a/index.html
+++ b/index.html
@@ -33,33 +33,34 @@
             </nav>
         </section>
 
-        <section class="contacts">  
+        <section class="contacts">
+            <div class="contacts__animation">
+                <div class="contacts__car">
+                    <div class="contacts__wheel"></div>
+                </div>
+            </div>
             <div class="contacts__content">
                 <div class="contacts__wrapper">
                     <div>
-                        <a href="#" class="contacts__phone"></a>
-                        <a href="#">Телефон</a>
-                        <a href="#"></a>
+                        <a href="tel:+789516790115" class="contacts__phone"></a>
+                        <a href="tel:+789516790115">Телефон</a>
                     </div>
                     <div>
-                        <a href="#" class="contacts__inst"></a>
-                        <a href="#">Инстаграмм</a>
-                        <a href="#"></a>
+                        <a href="mailto:Tip.no@mail.ru" class="contacts__mail"></a>
+                        <a href="mailto:Tip.no@mail.ru">Почта</a>
                     </div>
                     <div>
-                        <a href="#" class="contacts__vk"></a>
-                        <a href="#">Вконтакте</a>
-                        <a href="#"></a>
+                        <a href="https://vk.com/infinitytsukuyomi127" class="contacts__vk"></a>
+                        <a href="https://vk.com/infinitytsukuyomi127">Вконтакте</a>
                     </div>
                     <div>
-                        <a href="#" class="contacts__teleg"></a>
-                        <a href="#">Телеграмм</a>
-                        <a href="#"></a>
+                        <a href="tel:+789516790115" class="contacts__teleg"></a>
+                        <a href="tel:+789516790115">Телеграмм</a>
                     </div>
                 </div>
                 <div class="content__map">
                     <div class="content__point"> Мы находимся здесь</div>
-                    <div  style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/kompyuternaya_akademiya_top/133164188744/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Компьютерная академия Toп</a><a href="https://yandex.ru/maps/967/obninsk/category/computer_courses/184106158/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Компьютерные курсы в Обнинске</a><a href="https://yandex.ru/maps/967/obninsk/category/further_education/184106162/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:28px;">Дополнительное образование в Обнинске</a><iframe src="https://yandex.ru/map-widget/v1/?indoorLevel=1&ll=36.620925%2C55.113060&mode=poi&poi%5Bpoint%5D=36.620232%2C55.113588&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D133164188744%26yclid%3D16666761529907740671&z=17.12" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+                    <div  style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/kompyuternaya_akademiya_top/133164188744/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Компьютерная академия Toп</a><a href="https://yandex.ru/maps/967/obninsk/category/computer_courses/184106158/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Компьютерные курсы в Обнинске</a><a href="https://yandex.ru/maps/967/obninsk/category/further_education/184106162/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:28px;">Дополнительное образование в Обнинске</a><iframe src="https://yandex.ru/map-widget/v1/?indoorLevel=1&ll=36.620925%2C55.113060&mode=poi&poi%5Bpoint%5D=36.620232%2C55.113588&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D133164188744%26yclid%3D16666761529907740671&z=17.12" width="560" height="350" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
                     </div>
                 </div>
                 
